--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "expose-loader": "^0.7.1",
     "file-loader": "^0.9.0",
     "node-sass": "^3.10.1",
+    "phaser-state-transition": "^2.4.2",
+    "phaser-swipe": "^1.0.4",
     "sass-loader": "^4.0.2",
     "standard": "^8.0.0",
     "style-loader": "^0.13.1",
