--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "serve": "webpack",
-    "build": "webpack",
+    "build": "webpack --config webpack.production.config.js",
     "test": "standard"
   },
   "license": "UNLICENSE",
