--- a/www/manifest.json
+++ b/www/manifest.json
@@ -42,6 +42,6 @@
   "start_url": "/index.html",
   "display": "fullscreen",
   "orientation": "portrait",
-  "background_color": "#87616D",
-  "theme_color": "#87616D"
+  "background_color": "#E09E91",
+  "theme_color": "#E09E91"
 }
